--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.3",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
+    "node-sass": "^4.10.0",
     "popper.js": "^1.14.4",
     "prop-types": "15.6.2",
     "react": "^16.5.2",
