--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:10.12-browsers
+      - image: circleci/ruby:2.5.3-node-browsers
     steps:
       - checkout
 
