--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,11 +49,17 @@ jobs:
           command: gem install sass
 
       - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-
+          name: Restore core dependencies cache
+          keys:
+            - core-dependencies-v3-{{ checksum "yarn.lock" }}
       - run:
           name: yarn-install
           command: yarn install
+      - save_cache:
+          name: Cache core dependencies
+          key: core-dependencies-v3-{{ checksum "yarn.lock" }}
+          paths:
+            - ~/.cache/yarn
 
       - run:
           name: yarn-sass
@@ -66,4 +72,4 @@ jobs:
 
       - run:
           name: yarn-test-ci
-          command: yarn test --ci
+          command: yarn test --updateSnapshot --ci
