--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "node-sass": "^4.10.0",
     "popper.js": "^1.14.4",
     "prop-types": "15.6.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "*",
+    "react-dom": "*",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "redux": "^4.0.1",
     "sass": "^1.14.3",
-    "storybook-react-router": "^1.0.1"
+    "storybook-react-router": "1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,16 +34,21 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.11",
+    "@storybook/addon-actions": "^3.0.0",
     "@storybook/addon-links": "^3.4.11",
     "@storybook/addon-storyshots": "^3.4.11",
-    "@storybook/addons": "^3.4.11",
+    "@storybook/addons": "^3.0.0",
     "@storybook/react": "^3.4.11",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
+    "react-router": "^4.0.0",
     "react-test-renderer": "^16.5.2"
   }
 }
