--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "*",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5",
+    "react-scripts": "2.1.1",
     "redux": "^4.0.1",
     "sass": "^1.14.3",
     "storybook-react-router": "1.0.1"
@@ -43,6 +43,7 @@
     "babel-runtime": "^6.26.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
+    "eslint": "^5.6.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
