--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           keys:
             - v1-js-dependencies-{{ checksum "yarn.lock" }}
             # uncomment to allow fallback to using the latest cache if no exact match is found
-            # - v1-dependencies-
+            - v1-dependencies-
           paths:
             - ~/.cache/yarn
 
