--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "auth0-js": "9.10.0",
+    "@auth0/auth0-spa-js": "^1.2.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
